@@ -43,6 +43,8 @@
     <string name="action_clear_shopping_list">Clear shopping list</string>
     <string name="action_rate">Rate on Google Play</string>
     <string name="action_rate_description">Support the development</string>
+    <string name="action_email">Send email</string>
+    <string name="action_email_description">Contact the developers</string>
     <string name="action_new_issue">Open new issue on GitHub</string>
     <string name="action_new_issue_description">Report bugs or request a feature</string>
     <string name="action_get_started">Get started</string>
@@ -384,7 +386,6 @@
 
     <string name="hint_server">Server URL</string>
     <string name="hint_key">Valid API key</string>
-    <string name="hint_message">Write email</string>
 
     <string name="setting_dark_mode">Force dark mode</string>
     <string name="setting_dark_mode_description">Off for system dependency</string>
